RebacExperiments/RebacExperiments.Acl/Ast/Generated/UsersetRewriteParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/philipp/source/repos/bytefish/AclExperiments//RebacExperiments/RebacExperiments.Acl/Ast/UsersetRewrite.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace RebacExperiments.Acl.Ast.Generated {
#pragma warning disable 3021
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class UsersetRewriteParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, UNION=14, INTERSECT=15, EXCLUDE=16, 
		TUPLE_USERSET_NAMESPACE=17, TUPLE_USERSET_OBJECT=18, TUPLE_USERSET_RELATION=19, 
		STRING=20, SINGLE_LINE_COMMENT=21, MULTI_LINE_COMMENT=22, IDENTIFIER=23, 
		WS=24;
	public const int
		RULE_namespace = 0, RULE_relation = 1, RULE_usersetRewrite = 2, RULE_userset = 3, 
		RULE_childUserset = 4, RULE_computedUserset = 5, RULE_usersetNamespaceRef = 6, 
		RULE_usersetObjectRef = 7, RULE_usersetRelationRef = 8, RULE_thisUserset = 9, 
		RULE_tupleToUserset = 10, RULE_tupleset = 11, RULE_namespaceRef = 12, 
		RULE_objectRef = 13, RULE_relationRef = 14, RULE_setOperationUserset = 15;
	public static readonly string[] ruleNames = {
		"namespace", "relation", "usersetRewrite", "userset", "childUserset", 
		"computedUserset", "usersetNamespaceRef", "usersetObjectRef", "usersetRelationRef", 
		"thisUserset", "tupleToUserset", "tupleset", "namespaceRef", "objectRef", 
		"relationRef", "setOperationUserset"
	};

	private static readonly string[] _LiteralNames = {
		null, "'name'", "':'", "'relation'", "'{'", "'}'", "'userset_rewrite'", 
		"'child'", "'computed_userset'", "'namespace'", "'object'", "'_this'", 
		"'tuple_to_userset'", "'tupleset'", "'union'", "'intersect'", "'exclude'", 
		"'$TUPLE_USERSET_NAMESPACE'", "'$TUPLE_USERSET_OBJECT'", "'$TUPLE_USERSET_RELATION'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "UNION", "INTERSECT", "EXCLUDE", "TUPLE_USERSET_NAMESPACE", 
		"TUPLE_USERSET_OBJECT", "TUPLE_USERSET_RELATION", "STRING", "SINGLE_LINE_COMMENT", 
		"MULTI_LINE_COMMENT", "IDENTIFIER", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "UsersetRewrite.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static UsersetRewriteParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public UsersetRewriteParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public UsersetRewriteParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class NamespaceContext : ParserRuleContext {
		public IToken namespaceName;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(UsersetRewriteParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(UsersetRewriteParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RelationContext[] relation() {
			return GetRuleContexts<RelationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationContext relation(int i) {
			return GetRuleContext<RelationContext>(i);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespace; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceContext @namespace() {
		NamespaceContext _localctx = new NamespaceContext(Context, State);
		EnterRule(_localctx, 0, RULE_namespace);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			Match(T__0);
			State = 33;
			Match(T__1);
			State = 34;
			_localctx.namespaceName = Match(STRING);
			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__2) {
				{
				{
				State = 35;
				relation();
				}
				}
				State = 40;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 41;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelationContext : ParserRuleContext {
		public IToken relationName;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(UsersetRewriteParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UsersetRewriteContext usersetRewrite() {
			return GetRuleContext<UsersetRewriteContext>(0);
		}
		public RelationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RelationContext relation() {
		RelationContext _localctx = new RelationContext(Context, State);
		EnterRule(_localctx, 2, RULE_relation);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			Match(T__2);
			State = 44;
			Match(T__3);
			State = 45;
			Match(T__0);
			State = 46;
			Match(T__1);
			State = 47;
			_localctx.relationName = Match(STRING);
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 48;
				usersetRewrite();
				}
			}

			State = 51;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsersetRewriteContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UsersetContext userset() {
			return GetRuleContext<UsersetContext>(0);
		}
		public UsersetRewriteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usersetRewrite; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsersetRewrite(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsersetRewriteContext usersetRewrite() {
		UsersetRewriteContext _localctx = new UsersetRewriteContext(Context, State);
		EnterRule(_localctx, 4, RULE_usersetRewrite);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			Match(T__5);
			State = 54;
			Match(T__3);
			State = 55;
			userset();
			State = 56;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsersetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ChildUsersetContext childUserset() {
			return GetRuleContext<ChildUsersetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComputedUsersetContext computedUserset() {
			return GetRuleContext<ComputedUsersetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SetOperationUsersetContext setOperationUserset() {
			return GetRuleContext<SetOperationUsersetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ThisUsersetContext thisUserset() {
			return GetRuleContext<ThisUsersetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TupleToUsersetContext tupleToUserset() {
			return GetRuleContext<TupleToUsersetContext>(0);
		}
		public UsersetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_userset; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUserset(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsersetContext userset() {
		UsersetContext _localctx = new UsersetContext(Context, State);
		EnterRule(_localctx, 6, RULE_userset);
		try {
			State = 63;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__6:
				EnterOuterAlt(_localctx, 1);
				{
				State = 58;
				childUserset();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 2);
				{
				State = 59;
				computedUserset();
				}
				break;
			case UNION:
			case INTERSECT:
			case EXCLUDE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 60;
				setOperationUserset();
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 4);
				{
				State = 61;
				thisUserset();
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 5);
				{
				State = 62;
				tupleToUserset();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChildUsersetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UsersetContext userset() {
			return GetRuleContext<UsersetContext>(0);
		}
		public ChildUsersetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_childUserset; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitChildUserset(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ChildUsersetContext childUserset() {
		ChildUsersetContext _localctx = new ChildUsersetContext(Context, State);
		EnterRule(_localctx, 8, RULE_childUserset);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			Match(T__6);
			State = 66;
			Match(T__3);
			State = 67;
			userset();
			State = 68;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComputedUsersetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UsersetNamespaceRefContext[] usersetNamespaceRef() {
			return GetRuleContexts<UsersetNamespaceRefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsersetNamespaceRefContext usersetNamespaceRef(int i) {
			return GetRuleContext<UsersetNamespaceRefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsersetObjectRefContext[] usersetObjectRef() {
			return GetRuleContexts<UsersetObjectRefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsersetObjectRefContext usersetObjectRef(int i) {
			return GetRuleContext<UsersetObjectRefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsersetRelationRefContext[] usersetRelationRef() {
			return GetRuleContexts<UsersetRelationRefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsersetRelationRefContext usersetRelationRef(int i) {
			return GetRuleContext<UsersetRelationRefContext>(i);
		}
		public ComputedUsersetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_computedUserset; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComputedUserset(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComputedUsersetContext computedUserset() {
		ComputedUsersetContext _localctx = new ComputedUsersetContext(Context, State);
		EnterRule(_localctx, 10, RULE_computedUserset);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			Match(T__7);
			State = 71;
			Match(T__3);
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 75;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__8:
					{
					State = 72;
					usersetNamespaceRef();
					}
					break;
				case T__9:
					{
					State = 73;
					usersetObjectRef();
					}
					break;
				case T__2:
					{
					State = 74;
					usersetRelationRef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1544L) != 0) );
			State = 79;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsersetNamespaceRefContext : ParserRuleContext {
		public IToken @ref;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(UsersetRewriteParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TUPLE_USERSET_NAMESPACE() { return GetToken(UsersetRewriteParser.TUPLE_USERSET_NAMESPACE, 0); }
		public UsersetNamespaceRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usersetNamespaceRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsersetNamespaceRef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsersetNamespaceRefContext usersetNamespaceRef() {
		UsersetNamespaceRefContext _localctx = new UsersetNamespaceRefContext(Context, State);
		EnterRule(_localctx, 12, RULE_usersetNamespaceRef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			Match(T__8);
			State = 82;
			Match(T__1);
			State = 83;
			_localctx.@ref = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==TUPLE_USERSET_NAMESPACE || _la==STRING) ) {
				_localctx.@ref = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsersetObjectRefContext : ParserRuleContext {
		public IToken @ref;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(UsersetRewriteParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TUPLE_USERSET_OBJECT() { return GetToken(UsersetRewriteParser.TUPLE_USERSET_OBJECT, 0); }
		public UsersetObjectRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usersetObjectRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsersetObjectRef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsersetObjectRefContext usersetObjectRef() {
		UsersetObjectRefContext _localctx = new UsersetObjectRefContext(Context, State);
		EnterRule(_localctx, 14, RULE_usersetObjectRef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			Match(T__9);
			State = 86;
			Match(T__1);
			State = 87;
			_localctx.@ref = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==TUPLE_USERSET_OBJECT || _la==STRING) ) {
				_localctx.@ref = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsersetRelationRefContext : ParserRuleContext {
		public IToken @ref;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(UsersetRewriteParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TUPLE_USERSET_RELATION() { return GetToken(UsersetRewriteParser.TUPLE_USERSET_RELATION, 0); }
		public UsersetRelationRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usersetRelationRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsersetRelationRef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsersetRelationRefContext usersetRelationRef() {
		UsersetRelationRefContext _localctx = new UsersetRelationRefContext(Context, State);
		EnterRule(_localctx, 16, RULE_usersetRelationRef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			Match(T__2);
			State = 90;
			Match(T__1);
			State = 91;
			_localctx.@ref = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==TUPLE_USERSET_RELATION || _la==STRING) ) {
				_localctx.@ref = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ThisUsersetContext : ParserRuleContext {
		public ThisUsersetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_thisUserset; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitThisUserset(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ThisUsersetContext thisUserset() {
		ThisUsersetContext _localctx = new ThisUsersetContext(Context, State);
		EnterRule(_localctx, 18, RULE_thisUserset);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			Match(T__10);
			State = 94;
			Match(T__3);
			State = 95;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TupleToUsersetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TuplesetContext tupleset() {
			return GetRuleContext<TuplesetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComputedUsersetContext computedUserset() {
			return GetRuleContext<ComputedUsersetContext>(0);
		}
		public TupleToUsersetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tupleToUserset; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTupleToUserset(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TupleToUsersetContext tupleToUserset() {
		TupleToUsersetContext _localctx = new TupleToUsersetContext(Context, State);
		EnterRule(_localctx, 20, RULE_tupleToUserset);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			Match(T__11);
			State = 98;
			Match(T__3);
			State = 99;
			tupleset();
			State = 100;
			computedUserset();
			State = 101;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TuplesetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceRefContext[] namespaceRef() {
			return GetRuleContexts<NamespaceRefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NamespaceRefContext namespaceRef(int i) {
			return GetRuleContext<NamespaceRefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectRefContext[] objectRef() {
			return GetRuleContexts<ObjectRefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectRefContext objectRef(int i) {
			return GetRuleContext<ObjectRefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationRefContext[] relationRef() {
			return GetRuleContexts<RelationRefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationRefContext relationRef(int i) {
			return GetRuleContext<RelationRefContext>(i);
		}
		public TuplesetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tupleset; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTupleset(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TuplesetContext tupleset() {
		TuplesetContext _localctx = new TuplesetContext(Context, State);
		EnterRule(_localctx, 22, RULE_tupleset);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(T__12);
			State = 104;
			Match(T__3);
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 108;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__8:
					{
					State = 105;
					namespaceRef();
					}
					break;
				case T__9:
					{
					State = 106;
					objectRef();
					}
					break;
				case T__2:
					{
					State = 107;
					relationRef();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1544L) != 0) );
			State = 112;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceRefContext : ParserRuleContext {
		public IToken @ref;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(UsersetRewriteParser.STRING, 0); }
		public NamespaceRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceRef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceRefContext namespaceRef() {
		NamespaceRefContext _localctx = new NamespaceRefContext(Context, State);
		EnterRule(_localctx, 24, RULE_namespaceRef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			Match(T__8);
			State = 115;
			Match(T__1);
			State = 116;
			_localctx.@ref = Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ObjectRefContext : ParserRuleContext {
		public IToken @ref;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(UsersetRewriteParser.STRING, 0); }
		public ObjectRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_objectRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IUsersetRewriteVisitor<TResult> typedVisitor = visitor as IUsersetRewriteVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitObjectRef(this);
			else return visitor.VisitChildren(this);
		}
	}
